--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,18 +5,19 @@ homepage: https://juliuscanute.com
 repository: https://github.com/juliuscanute/qr_code_scanner
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
-  flutter: ">=1.12.0"
+  sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
-  js: ^0.6.3
+  js: ^0.7.1
+
   flutter:
     sdk: flutter
+
   flutter_web_plugins:
     sdk: flutter
 
 dev_dependencies:
-  flutter_lints: ^1.0.4
+  flutter_lints: ^4.0.0
 
 flutter:
   plugin:
@@ -26,6 +27,6 @@ flutter:
         pluginClass: FlutterQrPlugin
       ios:
         pluginClass: FlutterQrPlugin
-#      web:
-#        pluginClass: FlutterQrPlugin
-#        fileName: flutter_qr_web.dart
+      web:
+        pluginClass: FlutterQrPlugin
+        fileName: flutter_qr_web.dart
